cleaned references and test ran notebook

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "Climate models are essential in policy making. Ideally, policy makers would like to interact with climate models through quick 'what-if' questions. For example, 'what-if we plant one trillion trees' or 'what if we support carbon tax'. However, current climate models need supercomputers and are overall too impractical to give quick answers. The below TEDx video goes into more detail. \n",
     "\n",
-    "This tutorial will teach machine learning (ML) practitioners and Earth scientists about a possible solution: fast approximations of climate models. We call those approximations 'emulators'. For the ML community, we introduce the in-/output dimensions, how to access data, the strength of a linear baseline, and common evaluation protocols for getting started with climate emulation. For the Earth scientist, we highlight key learnings in picking the functional form that ML shall learn, the need for non-ML baselines, and the risk of overfitting to internal variability."
+    "This tutorial will teach machine learning (ML) practitioners and Earth scientists about a possible solution: fast approximations of climate models. We call those approximations 'emulators'. ML emulators have generated weather forecasts in seconds rather than hours (Lam et al., 2023), but their usefulness in climate is still unclear. For the ML community, we introduce the in-/output dimensions, how to access data, the strength of a linear baseline, and common evaluation protocols for getting started with climate emulation. For the Earth scientist, we highlight key learnings in picking the functional form that ML shall learn, the need for non-ML baselines, and the risk of overfitting to internal variability."
    ]
   },
   {
@@ -100,7 +100,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f0fd4e3b950>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f3eb05ebdd0>"
       ]
      },
      "execution_count": 2,
@@ -147,9 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Introduction"
    ]
@@ -196,8 +194,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "o5sbM_JPpdMR",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "o5sbM_JPpdMR"
    },
    "source": [
     "## Target Audience, Background, and Prerequisites"
@@ -284,9 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Data"
    ]
@@ -294,8 +289,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "jXoiLncsU3pe",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "jXoiLncsU3pe"
    },
    "source": [
     "## Data Description"
@@ -305,14 +299,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There exist much climate data. Indeed the CMIP6 dataset contains over 20 petabyte (PB) of data from over 50 climate models. The CMIP6 dataset is the primary source for synthesizing climate information to policy and decisionmakers as part of the [IPCC AR6 Report](https://www.ipcc.ch/). Each climate model uses as input a prescribed trajectory of co2, methane, and aerosol emissions, which are called shared socioeconomic pathways (SSPs). Given one scenario, the climate model then solves many differential equations of the atmosphere, ocean, land, and ice on a supercomputer to predict the climate from 1850 to 2100 and outputs a 3D grid of state variables, such as temperature, wind, pressure, and humidity, at typically 30min temporal and 1° spatial resolution with an additional vertical grid. The CMIP6 data contains spatiotemporal averages and downstream variables of those variables. "
+    "There exist much climate data. Indeed the CMIP6 dataset contains over 20 petabyte (PB) of data from over 50 climate models (Tebaldi et al., 2021). The CMIP6 dataset is the primary source for synthesizing climate information to policy and decisionmakers as part of the [IPCC AR6 Report](https://www.ipcc.ch/). Each climate model uses as input a prescribed trajectory of co2, methane, and aerosol emissions, which are called shared socioeconomic pathways (SSPs) (O'Neill et al., 2022). Given one scenario, the climate model then solves many differential equations of the atmosphere, ocean, land, and ice on a supercomputer to predict the climate from 1850 to 2100 and outputs a 3D grid of state variables, such as temperature, wind, pressure, and humidity, at typically 30min temporal and 1° spatial resolution with an additional vertical grid (see [climate primer](https://www.carbonbrief.org/qa-how-do-climate-models-work/)). The CMIP6 data contains spatiotemporal averages and downstream variables of those variables. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "PoF-BxSM5Jkc",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "PoF-BxSM5Jkc"
    },
    "source": [
     "## Data Download"
@@ -388,7 +381,9 @@
    "source": [
     "This section formats the raw data into a CO2 -> temp mapping.\n",
     "\n",
-    "The raw ClimateBench data contains annual snapshots of temperature, precipitation, extreme precipitation, diurnal temperature and four greenhouse gases (co2, ch4, bc, and so2) from five climate scenario simulations. Each snapshot is a (144 x 96) pixel image (width x length; lon x lat). Three scenarios have only been run on the past (hist-GHG, hist-aer, and historical) containing data from 1850-2014 and four scenarios (ssp126, -245, -370, and -585) have only been run on the future, but stacked with historical data to contain all years from 1850–2100. The data in each scenario is averaged across three realizations; each realization in the ground-truth climate model uses the same forcings, but slightly different initial conditions. The scenarios are detailed in [ClimateBench Table 1](https://doi.org/10.1029/2021MS002954). We hold out one scenario from the 'middle range' (ssp245) and train on the other five to evaluate if a learned model can interpolate."
+    "The raw ClimateBench data contains annual snapshots of temperature, precipitation, extreme precipitation, diurnal temperature and four greenhouse gases (co2, ch4, bc, and so2) from five climate scenario simulations. Each snapshot is a (144 x 96) pixel image (width x length; lon x lat). Three scenarios have only been run on the past (hist-GHG, hist-aer, and historical) containing data from 1850-2014 and four scenarios (ssp126, -245, -370, and -585) have only been run on the future, but stacked with historical data to contain all years from 1850–2100. The data in each scenario is averaged across three realizations; each realization in the ground-truth climate model uses the same forcings, but slightly different initial conditions. The scenarios are detailed in [ClimateBench Table 1](https://doi.org/10.1029/2021MS002954). We hold out one scenario from the 'middle range' (ssp245) and train on the other five to evaluate if a learned model can interpolate. \n",
+    "\n",
+    "Note, the historical data of 1850-2013 is used in both train and validation to ensure comparability with the models in ClimateBench. However, it would be better practice to hold out historical data during evaluation. "
    ]
   },
   {
@@ -573,16 +568,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.feature_artist.FeatureArtist at 0x7f0f5c2da3d0>"
+       "<cartopy.mpl.feature_artist.FeatureArtist at 0x7f3e2addd290>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -706,8 +701,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "qa9Iuu2GU52Z",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "qa9Iuu2GU52Z"
    },
    "source": [
     "<a name=\"methodology\"></a>\n",
@@ -722,7 +716,7 @@
     "\n",
     "**Model complexity:** First, we would like to match the model complexity to the data availability and complexity. We can roughly order the common ML models by complexity: linear model < random forest < Gaussian Process < CNN, Neural Operator, GNN < LSTM < CNN-LSTM < Transformer.\n",
     "\n",
-    "**Spatial inductive bias:** Further, we can incorporate domain knowledge in the deep learning architecture by choosing a model with spatial inductive biases. For example, CNNs are good for learning local relationships, neural operators for learning spectrally smooth data, graph neural networks for learning teleconnections, random forests for feature-driven data, and Gaussian Processes for spatially smooth probabilistic data, etc. Transformers are designed to have minimal inductive biases. Diffusion and GAN models are characterized primarily through their loss function and often use CNNs.\n",
+    "**Spatial inductive bias:** Further, we can incorporate domain knowledge in the deep learning architecture by choosing a model with spatial inductive biases. For example, CNNs are good for learning local relationships, neural operators for learning spectrally smooth data (Lütjens et al., 2022), graph neural networks for learning teleconnections (Cachay et al., 2021), random forests for feature-driven data, and Gaussian Processes for spatially smooth probabilistic data, etc. Transformers are designed to have minimal inductive biases. Diffusion and GAN models are characterized primarily through their loss function and often use CNNs. See Thuemmel et al., 2023 for deeper dive on spatial inductive biases.\n",
     "\n",
     "**Incorporating time:** \n",
     "RNNs or LSTMs are the go-to choice in deep learning for capturing temporal relationships. The popularity of deep learning, however, brushes over powerful traditional models, such as linear ODEs and ARIMA. \n",
@@ -769,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1032,13 +1026,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e49492196fd49a4924814614aa57566",
+       "model_id": "c2b9020a0df1458aa30a2651ecfffa06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1068,10 +1062,10 @@
     "Y_nrmse_over_degree = []\n",
     "for degree in tqdm(degrees):\n",
     "    pattern_scaling_poly = ps.PatternScaling(deg=degree)\n",
-    "    pattern_scaling_poly.train(tas_global, tas_local)\n",
+    "    pattern_scaling_poly.train(var_global, var_local)\n",
     "\n",
     "    # Apply pattern scaling model on test data\n",
-    "    preds_pattern_scaling_poly = pattern_scaling_poly.predict(tas_global_test) # (n_time, n_lat, n_lon)\n",
+    "    preds_pattern_scaling_poly = pattern_scaling_poly.predict(var_global_test) # (n_time, n_lat, n_lon)\n",
     "\n",
     "    # Convert into xarray\n",
     "    preds_pattern_scaling_poly_xr = xr.DataArray(data=preds_pattern_scaling_poly, \n",
@@ -1092,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1095,7 @@
        "Text(0.5, 1.0, 'NRMSE over Degree of Polynomial Pattern Scaling:\\nLinear: global CO2 -> global T \\n Polynomial: global T -> local T \\n Trained on 1850-2100.\\nTested on 2080-2100 in held-out ssp245')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1146,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1255,31 +1249,54 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References<a name=\"references\"></a>\n",
+    "\n",
+    "Please cite this abstract if you consider this tutorial useful:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "PkKqewK_-ZLD"
    },
    "source": [
-    "<a name=\"references\"></a>\n",
-    "# References\n",
-    "\n",
-    "Please cite this abstract if you consider this tutorial useful:\n",
-    "```\n",
-    "Lütjens, Björn, Lea M. Hadzic, Dava Newman, and Mark Veillette. \"The Climate Pocket: Tutorial on Building Fast Emulators in Climate Modeling.\" AGU23 (2023). online: https://agu.confex.com/agu/fm23/meetingapp.cgi/Paper/1304372\n",
     "```\n",
     "\n",
+    "@misc{lutjens23climatetutorial,\n",
+    "    author = {Lütjens, Björn and Hadzic, Lea M. and Newman, Dava and Veillette, Mark},\n",
+    "    publisher = {AGU23 Fall Meeting},\n",
+    "    title={The Climate Pocket: Tutorial on Building Fast Emulators in Climate Modeling},\n",
+    "    year={2023},\n",
+    "    url={https://agu.confex.com/agu/fm23/meetingapp.cgi/Paper/1304372}}\n",
+    "\n",
+    "```2021MS002954.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Other References\n",
     "\n",
-    "*   Cachay, R. et al. (2021). The World as a Graph: Improving El Niño Forecasts with Graph Neural Networks. https://doi.org/10.48550/arXiv.2104.05089.\n",
+    "*   Cachay, R. et al. (2021). The World as a Graph: Improving El Niño Forecasts with Graph Neural Networks, arXiv, https://doi.org/10.48550/arXiv.2104.05089.\n",
     "\n",
+    "*   Lam, R. et al. (2023). Learning skillful medium-range global weather forecasting, Science, hhttps://doi.org/10.1126/science.adi2336\n",
     "\n",
-    "*   Millar, R. et al. (2017). Emission budgets and pathways consistent with limiting warming to 1.5 °C. Nature Geoscience, 10, 741–747, https://doi.org/10.1038/ngeo3031.\n",
-    "\n",
+    "*   Lütjens, B. et al. (2022). Multiscale Neural Operator: Learning Fast and Grid-independent PDE Solvers, arXiv,  \n",
+    "https://doi.org/10.48550/arXiv.2207.11417.\n",
     "\n",
     "*   O'Neill, B. C. et al. (2022). The Scenario Model Intercomparison Project (ScenarioMIP) for CMIP6. Geosci. Model Dev., 9, 3461–3482, https://doi.org/10.5194/gmd-9-3461-2016.\n",
     "\n",
+    "*   Tebaldi, C. et al. (2021). Climate model projections from the Scenario Model Intercomparison Project (ScenarioMIP) of CMIP6, EGU ESD, https://doi.org/10.5194/esd-12-253-2021\n",
     "\n",
-    "*   Pathak et al. (2022). FourCastNet: A Global Data-Driven High-Resolution Weather Model Using Adaptive Fourier Neural Operators. https://doi.org/10.48550/arXiv.2202.11214.\n",
+    "*   Thuemmel, J. et al. (2023). Inductive biases in deep learning models for weather prediction, arXiv, https://doi.org/10.48550/arXiv.2304.04664.\n",
     "\n",
+    "\n",
+    "\n",
+    "*   Pathak et al. (2022). FourCastNet: A Global Data-Driven High-Resolution Weather Model Using Adaptive Fourier Neural Operators. https://doi.org/10.48550/arXiv.2202.11214.0\n",
     "\n",
     "*   Watson-Parris, D. et al. (2022). ClimateBench v1.0: A Benchmark for Data-Driven Climate Projections. Journal of Advances in Modeling Systems, 14(10), https://doi.org/10.1029/2021MS002954.\n",
     "\n"
